[build-system]
# These lines tell pip to use setuptools to build your package
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Project metadata (equivalent to setup() arguments)
name = "Python.Trading.Tools"
version = "0.1.0"
description = "A Python library for trading tools."
requires-python = ">=3.8"
dependencies = []  # No runtime dependencies
authors = [
    { name = "venantvr", email = "venantvr@gmail.com" },
]
urls = { Homepage = "https://github.com/venantvr/Python.Trading.Tools" }

[project.optional-dependencies]
dev = [
    "setuptools>=61.0",
    "wheel>=0.40.0",
    "build>=0.10.0",
    "pytest>=7.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "safety>=2.3.0",
    "pre-commit>=3.0.0",
    "twine>=4.0.0"
]
test = ["pytest>=7.0.0"]

[tool.setuptools.packages.find]
# This table is the modern equivalent of packages=find_packages()
# It tells setuptools to automatically find packages in the directory

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose"
