[metadata]
name = Python.Trading.Tools
author = venantvr
author_email = venantvr@gmail.com
description = Une bibliothèque Python pour le logging et le caching
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/venantvr/Python.Trading.Tools
project_urls =
    Bug Tracker = https://github.com/venantvr/Python.Trading.Tools/issues
    Source = https://github.com/venantvr/Python.Trading.Tools
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8

[flake8]
max-line-length = 100
ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .venv,
    venv

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
ignore_missing_imports = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = --verbose --cov=venantvr --cov-report=html --cov-report=term-missing

[coverage:run]
source = venantvr
omit =
    */tests/*
    */test_*.py
    */__init__.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING: